objects/DG_Remainder_mail__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This Custom setting is created to send mails to pending approval more than a day or 2</description>
    <fields>
        <fullName>BG__c</fullName>
        <label>BG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OBR_Approval_Lead_Time__c</fullName>
        <label>OBR Approval Lead Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OR_Approval_Lead_Time__c</fullName>
        <label>OR Approval Lead Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DG Remainder mail</label>
</CustomObject>